--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
 }
 
 @font-face {
-  font-family: "dm-sans";
-  src: url();
+  font-family: "dm-sans-bold";
+  src: url("dm-sans-bold");
+  
 }
