--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,7 +15,3 @@ code {
     monospace;
 }
 
-@font-face {
-  
-
-}
