--- a/src/components/NavBar/maincard.css
+++ b/src/components/NavBar/maincard.css
@@ -150,6 +150,7 @@ p {
    
     font-size: 4rem;
     background-color: aliceblue;
+
  
     
     padding: 35px;
@@ -164,11 +165,29 @@ p {
     margin: 1rem;
 }
 
+.button1:hover {
+    font-family: 'DM Sans', sans-serif;
+   
+    font-size: 4rem;
+    background-color: #8C52ff;
+ 
+    
+    padding: 35px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 50rem;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #8C52ff;
+    border-radius: 50px;
+    color: white;
+    margin: 1rem;
+}
 .btnContainer {
     display: flex;
     justify-content: space-between;
     width: 100%;
-  
+    display: block;
     height: auto;
 
     
