Co-authored-by: William Zhang  <willzhang@utexas.edu> Co-authored-by: Noor Ali <oronila@users.noreply.github.com> Co-authored-by: BrianBahk <BrianBahk@users.noreply.github.com>

--- a/src/components/NavBar/maincard.css
+++ b/src/components/NavBar/maincard.css
@@ -7,9 +7,9 @@
 }
 .landing {
     border: 1 px solid hsl(0, 0%, 80%);
-    border-radius: 10px;
+    border-radius: 1vh;
     /* box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.122); */
-    padding: 20px;
+    padding: 2.5vh;
     margin: 0px;
     height: 100vh;
     align-items: center;
@@ -33,6 +33,7 @@ input {
     color: white;
     font-size: 1.1rem;
     font-weight: 500;
+    display: block;
 }
 
 input:focus {
@@ -55,7 +56,22 @@ input::placeholder {
     position: relative;
     display: flex;
     border-radius: 50px;
+    /* display: inline-block; */
 }
+
+.wrapper span{
+    z-index: 1000;
+    color: 'white';
+    background-color: "black";
+}
+
+.right_arrow {
+    margin-top: -670%;
+    margin-left: -725%;
+    scale: 7%;
+
+}
+
 
 .wrapper input {
     background: rgba(255, 255, 255, 0.1);
@@ -63,18 +79,174 @@ input::placeholder {
     border-radius: 50px;
     padding: 1rem 2rem;
     width: 100%;
+    background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .wrapper button {
-    background-color: white;
+    background-color: #8C52ff; 
     border-radius: 50px;
     aspect-ratio: 1;
     height: 80%;
+    width: 13%;
     position: absolute;
     top: 10%;
-    right: 20px;
+    right: 10px;
+    float: right;
+    z-index: 10;
+}
+
+.wrapper2 {
+    /* background-color: aliceblue; */
+    width: 200px;
+    height: 20px;
+    margin: 0 auto;
+    margin-top: 8.5rem; /* change this for the demo viewing TODO*/
+    max-width: 100%;
+    position: relative;
+    display: flex;
+    border-radius: 50px;
+    /* display: inline-block; */
+    
+
+}
+
+.wrapper_button_2 {
+      background-color: #8C52ff; 
+     border-radius: 50px;
+    
+    
+    align-items: center;
+    justify-content: center;
+     padding: 1px 3px;
+     width: 25%;
+     margin-left: 38%;
+  
+     margin-top: -10%;
+     
+}
+
+.right_arrow2 {
+    margin-top: -540%;
+    margin-left: -530%;
+    scale: 7%;
+}
+
+
+.wrapper3 {
+    /* background-color: aliceblue; */
+    width: 200px;
+    height: 20px;
+    margin: 0 auto;
+    margin-top: 8.5rem; /* change this for the demo viewing TODO*/
+    max-width: 100%;
+    position: relative;
+    display: flex;
+    border-radius: 50px;
+    /* display: inline-block; */
+    
+
+}
+
+.wrapper_button_3 {
+      background-color: #8C52ff; 
+     border-radius: 50px;
+    
+    
+    align-items: center;
+    justify-content: center;
+     padding: 1px 3px;
+     width: 25%;
+     margin-left: 38%;
+  
+     margin-top: -10%;
+     
+}
+
+.right_arrow3 {
+    margin-top: -540%;
+    margin-left: -530%;
+    scale: 7%;
+}
+
+.blob_container {
+    display: flex;
+    margin-top: -82%;
+    margin-left: -22%;
+    transform: rotate(-40deg);
+    position: relative;
+    z-index: -10;
+   
+
+}
+
+.blob_container2 {
+    display: flex;
+    margin-top: -15vh;
+   
+    transform: rotate(150deg);
+    margin-left: 107%;
+    position: relative;
+    z-index: -10;
+
+}
+
+.blob_container3 {
+    display: flex;
+    margin-top: -40vh;
+   
+    transform: rotate(150deg);
+    margin-left: 70%;
+    position: relative;
+    z-index: -10;
+}
+
+.blob_container4 {
+    display: flex;
+    margin-top: 10%;
+   
+   
+    margin-left: 25%;
+    position: relative;
+    z-index: -10;
+}
+
+.blob_container5 {
+    display: flex;
+    margin-top: -90vh;
+   
+   
+    margin-left: 50%;
+    position: relative;
+    z-index: -10;
+}
+
+
+
+.blobs {
+    scale: 55%;
+    margin-top: 5%;
+    z-index: -10;
+}
+
+.blobs2 {
+    scale: 55%;
+    z-index: -10;
     
 }
+
+.blobs3 {
+    scale: 65%;
+    z-index: -10;
+}
+
+.blobs5 {
+    scale: 40%;
+}
+
+
+
 
 .backgroundVideo1 {
     position: relative;
@@ -86,7 +258,13 @@ input::placeholder {
     margin-top: -85vh;
 }
 
-
+.layer {
+    background-color: rgba(255, 255, 255, 0.612);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: -85vh;
+}
 
 .MainText {
     font-family: 'DM Sans', sans-serif;
@@ -127,7 +305,6 @@ p {
 
 
 .MiddleSlide {
-    scroll-margin-top: 10em;
     margin-top: 100%;
     /* box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.122); */
 }
@@ -156,12 +333,32 @@ p {
     padding: 35px;
     padding-top: 15px;
     padding-bottom: 15px;
-    width: 50rem;
+    width: 18rem;
     text-align: center;
     font-size: 16px;
     border: 2px solid #8C52ff;
     border-radius: 50px;
     color: #8c52ff;
+    margin: 1rem;
+}
+
+.button1selected {
+    font-family: 'DM Sans', sans-serif;
+   
+    font-size: 4rem;
+    background-color: #8C52ff;
+
+ 
+    
+    padding: 35px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 18rem;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #8C52ff;
+    border-radius: 50px;
+    color: white;
     margin: 1rem;
 }
 
@@ -175,7 +372,7 @@ p {
     padding: 35px;
     padding-top: 15px;
     padding-bottom: 15px;
-    width: 50rem;
+    width: 18rem;
     text-align: center;
     font-size: 16px;
     border: 2px solid #8C52ff;
@@ -183,16 +380,26 @@ p {
     color: white;
     margin: 1rem;
 }
+
+.add_btn {
+    background-color: #ffffff;
+}
 .btnContainer {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    display: block;
-    height: auto;
-
     
-
+    width: 100%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    background-color: #8C52ff;
 }
+
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
+
 
 .gradient {
 	text-transform: uppercase;
@@ -200,3 +407,141 @@ p {
 	font-family: 'DM Sans', sans-serif;
     font-size: 3rem;
 }
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.white {
+    color: #ffffff;
+}
+
+.LastSlide {
+    margin-top: 100%;
+}
+
+
+
+.bottomOfPage {
+    margin-top: 2.5%;
+}
+#last {
+    margin-top: 15%;
+}
+#middle {
+    margin-top: 5%;
+}
+.center-elems {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -5%;
+}
+
+.wrapper4 {
+    /* background-color: aliceblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 360px;
+    margin: 0 auto;
+    margin-top: 2%;
+    max-width: 100%;
+    position: relative;
+    border-radius: 50px;
+    
+}
+
+.wrapper4 input {
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 1rem 2rem;
+    width: 100%;
+    background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.wrapper4 button {
+    background-color: #8C52ff; 
+    border-radius: 50px;
+    aspect-ratio: 1;
+    height: 80%;
+    width: 13%;
+    position: absolute;
+    top: 10%;
+    right: 10px;
+    float: right;
+    z-index: 10;
+}
+.generated-text-box {
+    font-family: 'DM Sans', sans-serif;
+   
+    font-size: 4rem;
+    background-color: aliceblue;
+
+ 
+    
+    padding: 35px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 18rem;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #8C52ff;
+    border-radius: 50px;
+    color: #8c52ff;
+    margin: 1rem;
+  }
+
+  .btn_x {
+    width: 5%;
+    height: 5%;
+    display: relative;
+    align-items: right;
+    float: right;
+    margin-right: -5%;
+    margin-top: 1%;
+    object-fit: cover;
+    background-color: #8c52ff;
+    z-index: -10;
+  }
+
+  .letterX {
+    
+    width: 5%;
+    height: 5%;
+    display: relative;
+    align-items: right;
+    float: right;
+    margin-right: -5%;
+    margin-top: 1%;
+    object-fit: cover;
+    z-index:10;
+  }
+
+  /* .generated-text-box:hover {
+    font-family: 'DM Sans', sans-serif;
+   
+  
+    background-color: #8C52ff;
+ 
+    padding: 35px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 18rem;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid #8C52ff;
+    border-radius: 50px;
+    color: white;
+    margin: 1rem;
+  } */
+
+  .center2 {
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 10px;
+  }
