--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -28,9 +28,9 @@
 }
 
 .desktopMenuListItem:hover {
-    color: green;
+    color: #8c52ff;
     padding-bottom: 0.5rem;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid #8c52ff;
 }
 
 .desktopMenu {
@@ -38,7 +38,7 @@
 
 }
 .desktopMenuListItem {
-    margin: 1rem;
+    margin: 1.5rem;
     cursor: pointer;
     color: black;
     font-family: 'DM Sans', sans-serif;
