--- a/src/components/NavBar/maincard.css
+++ b/src/components/NavBar/maincard.css
@@ -51,7 +51,7 @@ input::placeholder {
     background-color: aliceblue;
     width: 360px;
     margin: 0 auto;
-    margin-top: -9em; /* change this for the demo viewing TODO*/
+    margin-top: -9.25em; /* change this for the demo viewing TODO*/
     max-width: 100%;
     position: relative;
     display: flex;
@@ -152,8 +152,7 @@ input::placeholder {
 .wrapper_button_3 {
       background-color: #8C52ff; 
      border-radius: 50px;
-    
-    
+    position:relative;
     align-items: center;
     justify-content: center;
      padding: 1px 3px;
@@ -165,9 +164,14 @@ input::placeholder {
 }
 
 .right_arrow3 {
-    margin-top: -540%;
-    margin-left: -530%;
+    margin-top: -540%; 
+
+     margin-left: -530%;
     scale: 7%;
+  
+    position: relative;
+    
+
 }
 
 .blob_container {
@@ -255,7 +259,7 @@ input::placeholder {
     align-items: left;
     justify-content: center;
     z-index: -4;
-    margin-top: -85vh;
+    margin-top: -75vh;
 }
 
 .layer {
@@ -383,6 +387,7 @@ p {
 
 .add_btn {
     background-color: #ffffff;
+
 }
 .btnContainer {
     display: flex;
