--- a/src/components/NavBar/maincard.css
+++ b/src/components/NavBar/maincard.css
@@ -1,8 +1,70 @@
 .MainCard {
     
     /* overflow: hidden; */
-    
+    /* height: 100%;
+    width: 100%;
+    align-items: center; */
+    position: relative;
+    flex: 1;
    
+}
+.backgroundvideo1{
+    
+}
+.video-container {
+    position: relative;
+  }
+  .down{
+    border-top:10px;
+    width: 100%;
+   text-align: center;
+   text-emphasis-color: red;
+  }
+  
+  .video-container video {
+    width: 100%;
+  }
+  
+  .gradient-overlay {
+    /* position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100px;  */
+     /* background: linear-gradient(aliceblue, rgba(0, 0, 0, 0));  */
+  }
+
+  
+.gradient-overlay {
+    position: absolute;
+    bottom: 4.25px;
+    left: 0;
+    right: 0;
+    height: 100px; /* Adjust height as needed */
+    background: linear-gradient(rgba(0,0,0,0), 50%, aliceblue); 
+  }
+
+  .top-gradient-overlay {
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100px; /* Adjust height as needed */
+    background: linear-gradient(aliceblue, rgba(0, 0, 0, 0)); /* Adjust gradient colors and transparency */
+  }
+
+.MainText {
+    font-family: 'DM Sans', sans-serif;
+   
+    font-size: 4rem;
+    margin-top: 5%;
+    text-align: center;
+    padding-top: 0px;
+    width: 100%;
+    background: linear-gradient(to bottom, rgb(31, 17, 55) 0%, #8C52ff 100%); 
+	 -webkit-background-clip: text; 
+	 -webkit-text-fill-color: transparent; 
+     z-index: 10;
+     position:absolute;
 
 }
 .landing {
@@ -13,7 +75,11 @@
     margin: 0px;
     height: 100vh;
     align-items: center;
+    z-index: 101;
+    /* z-index: 5; */
+  
 }
+
 
 
 button {
@@ -30,10 +96,12 @@ button:hover {
 }
 
 input {
-    color: white;
+
+    color: black;
     font-size: 1.1rem;
     font-weight: 500;
     display: block;
+    outline: none;
 }
 
 input:focus {
@@ -49,14 +117,13 @@ input::placeholder {
 
 .wrapper {
     background-color: aliceblue;
-    width: 360px;
-    margin: 0 auto;
-    margin-top: -9.25em; /* change this for the demo viewing TODO*/
+    border: 2px solid white;
+    width: 25%;
+    margin: 0 auto; /* Center horizontally */
     max-width: 100%;
-    position: relative;
     display: flex;
     border-radius: 50px;
-    /* display: inline-block; */
+    margin-top: 2%;
 }
 
 .wrapper span{
@@ -66,8 +133,8 @@ input::placeholder {
 }
 
 .right_arrow {
-    margin-top: -670%;
-    margin-left: -725%;
+    margin-top: -610%;
+    margin-left: -630%;
     scale: 7%;
 
 }
@@ -75,7 +142,7 @@ input::placeholder {
 
 .wrapper input {
     background: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
+     border: 2px aliceblue;
     border-radius: 50px;
     padding: 1rem 2rem;
     width: 100%;
@@ -86,11 +153,10 @@ input::placeholder {
 
 .wrapper button {
     background-color: #8C52ff; 
-    border-radius: 50px;
-    aspect-ratio: 1;
-    height: 80%;
-    width: 13%;
-    position: absolute;
+    border-radius: 50%; /* Make it a circle */
+    aspect-ratio: 1; /* Maintain aspect ratio */
+    height: 50px; /* Adjust height as needed */
+    width: 50px; /* Adjust width as needed */
     top: 10%;
     right: 10px;
     float: right;
@@ -174,120 +240,11 @@ input::placeholder {
 
 }
 
-.blob_container {
-    display: flex;
-    margin-top: -82%;
-    margin-left: -22%;
-    transform: rotate(-40deg);
-    position: relative;
-    z-index: -10;
-   
-
-}
-
-.blob_container2 {
-    display: flex;
-    margin-top: -15vh;
-   
-    transform: rotate(150deg);
-    margin-left: 107%;
-    position: relative;
-    z-index: -10;
-
-}
-
-.blob_container3 {
-    display: flex;
-    margin-top: -40vh;
-   
-    transform: rotate(150deg);
-    margin-left: 70%;
-    position: relative;
-    z-index: -10;
-}
-
-.blob_container4 {
-    display: flex;
-    margin-top: 10%;
-   
-   
-    margin-left: 25%;
-    position: relative;
-    z-index: -10;
-}
-
-.blob_container5 {
-    display: flex;
-    margin-top: -90vh;
-   
-   
-    margin-left: 50%;
-    position: relative;
-    z-index: -10;
-}
-
-
-
-.blobs {
-    scale: 55%;
-    margin-top: 5%;
-    z-index: -10;
-}
-
-.blobs2 {
-    scale: 55%;
-    z-index: -10;
-    
-}
-
-.blobs3 {
-    scale: 65%;
-    z-index: -10;
-}
-
-.blobs5 {
-    scale: 40%;
-}
-
-
-
-
-.backgroundVideo1 {
-    position: relative;
-    scale: 75%;
-    display: flex;
-    align-items: left;
-    justify-content: center;
-    z-index: -4;
-    margin-top: -75vh;
-}
-
-.layer {
-    background-color: rgba(255, 255, 255, 0.612);
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    margin-top: -85vh;
-}
-
-.MainText {
-    font-family: 'DM Sans', sans-serif;
-   
-    font-size: 4rem;
-   
-    
-    text-align: center;
-    padding-top: 0px;
-    width: 100%;
-    background: linear-gradient(to bottom, rgb(31, 17, 55) 0%, #8C52ff 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
  h2 {
     color: rgb(55, 55, 55);
     margin: 0px;
     padding: 0px;
+    z-index: 101;
 }
 
 p {
@@ -297,33 +254,23 @@ p {
     font-size: 1rem;
 }
 
-.WavyBottom {
-    display: flex;
-    justify-content: center;
-    height: 50vh;
-    
-    
- 
-    
-}
-
-
 .MiddleSlide {
-    margin-top: 100%;
-    /* box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.122); */
+    margin-top: 10%;
+
 }
 
 .CenterTitle {
-    margin: 0px;
-    padding: 0px;
+   
+   
     align-items: center;
     display: flex;
     justify-content: center;
     font-family: 'DM Sans', sans-serif;
     font-size: 3rem;
-    background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
+    margin-top:10%;
+    /* background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
 	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	-webkit-text-fill-color: transparent; */
 }
 
 .CenterTitle-final {
@@ -335,27 +282,30 @@ p {
     text-align: center;
     font-family: 'DM Sans', sans-serif;
     font-size: 5rem;
-    padding-top: 1100%;
-    background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
+    padding-top: 110%;
+    padding-bottom: 20%;
+    /* background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
 	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	-webkit-text-fill-color: transparent; */
 }
 
 
 
 #last-extra {
-    margin-top: -20%;
+    margin-top: 0%;
  
     
 }
 
 .confetti {
-    scale: 75%;
-    margin-top: -100%;
-    margin-left: -20%;
+    scale: 100%;
+    margin-top: -150%;
+   
     position: relative;
     opacity: 40%;
     z-index: -10;
+    justify-self: center;
+    
 }
 
 .button1 {
@@ -455,22 +405,32 @@ p {
 }
 
 .LastSlide {
-    margin-top: 100%;
+    margin-top: 20%;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .LastSlide-extra{
-    margin-top: -600%;
+    margin-top: -20%;
 }
 
-
+.blobMob{
+position:absolute;
+z-index: -10;
+scale:132%;
+margin-left: 15%;
+margin-top: -20%;
+    
+}
 .bottomOfPage {
-    margin-top: 2.5%;
+    margin-top: 25%;
 }
 #last {
-    margin-top: 15%;
+    margin-top: 20%;
 }
 #middle {
-    margin-top: 5%;
+    margin-top: 6%;
 }
 .center-elems {
     display: flex;
@@ -499,9 +459,9 @@ p {
     border-radius: 50px;
     padding: 1rem 2rem;
     width: 100%;
-    background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
+    /* background: linear-gradient(to right, #292929 0%, #8C52ff 100%);
 	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	-webkit-text-fill-color: transparent; */
 }
 
 .wrapper4 button {
@@ -585,3 +545,79 @@ p {
     margin-right: auto;
     max-height: 10px;
   }
+
+  .blob_container {
+    display: flex;
+
+    margin-left: -22%;
+    /* transform: rotate(-40deg); */
+    position: absolute;
+    z-index: -10;
+    
+   
+
+}
+
+.blob_container2 {
+    display: flex;
+    margin-top: -15vh;
+   
+    transform: rotate(150deg);
+    margin-left: 107%;
+    position: relative;
+    z-index: -10;
+
+}
+
+.blob_container3 {
+    display: flex;
+    margin-top: -40vh;
+   
+    transform: rotate(150deg);
+    margin-left: 70%;
+    position: relative;
+    z-index: -10;
+}
+
+.blob_container4 {
+    display: flex;
+    margin-top: 10%;
+   
+   
+    margin-left: 25%;
+    position: relative;
+    z-index: -10;
+}
+
+.blob_container5 {
+    display: flex;
+    margin-top: -90vh;
+   
+   
+    margin-left: 50%;
+    position: relative;
+    z-index: -10;
+}
+
+
+
+.blobs {
+    scale: 55%;
+    margin-top: 5%;
+    z-index: -10;
+}
+
+.blobs2 {
+    scale: 55%;
+    z-index: -10;
+    
+}
+
+.blobs3 {
+    scale: 65%;
+    z-index: -10;
+}
+
+.blobs5 {
+    scale: 40%;
+}
