--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,30 +1,35 @@
 .navbar {
     height: 5rem;
-    width: 120vw;
+    width: 100%;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.122);
-    margin: 0 auto;
-    /* padding: 0rem 2rem; */
+    margin: 0; /* Remove the margin */
     background-color: aliceblue;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: sticky;
     top: 0;
-    z-index: 5;
-    max-width: 80rem;
+    z-index: 100;
     overflow: hidden;
 }
 #left_logo {
-    padding-left: 2em;
+    padding-left: 10%;
 }
 #right_logo {
-    padding-right: 2em;
+    padding-right: 10%;
 }
 .logo {
     object-fit: cover;
     height: 2.5rem;
     width: auto;
+    scale: 125%;
     
+}
+
+.profile {
+    object-fit: cover;
+    height: 2.5rem;
+    width: auto;
 }
 
 .desktopMenuListItem:hover {
@@ -46,4 +51,13 @@
     
     
  
+}
+
+.loginButton .signupButton{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: black;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1rem;
 }
