--- a/src/examplePage/examplePage.css
+++ b/src/examplePage/examplePage.css
@@ -1,3 +1,50 @@
 .test {
     font-size: xx-large;
 }
+.buttonHolder {
+    height: 100%;
+    margin-top: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+.rounded-square-button {
+    border-radius: 50px; /* Adjust the value to change the roundness */
+    width: 300px; /* Adjust the width and height to make it square */
+    height: 150px; /* Adjust the width and height to make it square */
+    border: none;
+    background-color: #8C52ff; /* Change the background color as needed */
+    color: #fff; /* Change the text color as needed */
+    font-size: 2rem; /* Change the font size as needed */
+    font-style: italic;
+    cursor: pointer;
+    
+    font-family: 'DM Sans', bold;
+    margin-top: 2%;
+
+  }
+
+  .MainText {
+    font-family: 'DM Sans', sans-serif;
+   
+    font-size: 4rem;
+    margin-top: -15%;
+    text-align: center;
+    padding-top: 0px;
+    width: 100%;
+    background: linear-gradient(to bottom, rgb(31, 17, 55) 0%, #8C52ff 100%); 
+	 -webkit-background-clip: text; 
+	 -webkit-text-fill-color: transparent; 
+     z-index: 10;
+     position:absolute;
+
+}
+
+  .rounded-square-button:hover {
+    background-color: #0056b3; /* Change the hover background color as needed */
+  }
+
+  .rounded-square-button:disabled {
+    opacity: 0.5; /* Adjust the opacity for disabled state */
+    cursor: not-allowed;
+  }
